Fix contrast issue with notifications dismiss link

--- a/stylesheets/_component.notifications.scss
+++ b/stylesheets/_component.notifications.scss
@@ -88,7 +88,7 @@
 }
 
 .notifications-dismiss {
-    color: color(text, light);
+    color: color(text);
     display: inline-block;
     float: right;
     line-height: 1.75em;
